--- a/Ctrnact-osmitisicovek-sveta/index.html
+++ b/Ctrnact-osmitisicovek-sveta/index.html
@@ -32,9 +32,13 @@
 
     <main class="container">
         <div id="main-content" class="main-content"></div>
+        <footer style="margin-top:40px;color:#666;">
+            <?php include "info.php"; ?>
+        </footer>
     </main>
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
